# py2fa

./: .gitignore  main.py  main.spec  pack.ps1  py2fa.spec  pyproject.toml
