[project]
name = "py2fa"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyinstaller>=6.15.0",
    "pyotp>=2.9.0",
    "pyperclip>=1.9.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
